--- a/lain/.emacs.d/sandbox.org
+++ b/lain/.emacs.d/sandbox.org
@@ -402,6 +402,24 @@ Shows matching parenthesis
 (setq show-paren-delay 0)
 (show-paren-mode)
 #+END_SRC
+*** Dashboard
+Show a cool custom dashboard buffer on startup.
+#+BEGIN_SRC emacs-lisp
+  (use-package dashboard
+    :diminish page-break-lines-mode
+    :config
+    (dashboard-setup-startup-hook)
+    (setq initial-buffer-choice (lambda () (get-buffer "*dashboard*")))
+
+    :custom
+    (dashboard-startup-banner 'logo)
+    (dashboard-banner-logo-title "Welcome to Electronic Macs")
+    (dashboard-items
+     '((recents . 5)
+       (agenda)
+       (bookmarks . 5)
+       (registers . 5))))
+#+END_SRC
 ** Themes
 *** pywal
 Fancy dynamic color scheme generation from desktop wallpapers.
